--- a/16-webpack和Vue的配置/package.json
+++ b/16-webpack和Vue的配置/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "webpack-dev-server": "^2.9.1"
   }
 }
